front-end/app/app.css
/**
 * Copyright (c) 2017 Jeff Patterson, Amanda Murphy, Paolo Villanueva, Patrick Overton, Connor Picken, Yun Cong Chen, Seth Amundsen, Michael Ohl, Matthew Tighe
 * ALL RIGHTS RESERVED
 * [This program is licensed under the "GNU General Public License"]
 * Please see the file COPYING in the source
 * distribution of this software for license terms.
 */

/* app css stylesheet */

/* Attitude size determined in attitude.js line 81
 * EarthFrameView size determined in
 */

 .view {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 50px 1fr 1fr 1fr 1fr;
     border: 3px solid white;
 }

 .navBar-container {
     grid-column-start: 1;
     grid-column-end: 5;
     border: 3px solid white;
 }

 .logo {
     float: left;
 }

 .button {
     float: left;
     color: #777;
     padding: 10px;
 }

 .button:hover {
     color: #000;
     background-color: #6B8B3D;
 }

#iframe {
    grid-column: 1/2;
    grid-row: 2/5;
}

.video-container {
    grid-column: 1/2;
    grid-row: 2/5;
    align-self: stretch;
    border: 3px solid white;
}

#video {
    width: 100%;
    height: 600px;
    background-color: black;
}

.efv-container {
    grid-column: 2/3;
    grid-row: 2/4;
    border: 3px solid white;
}

.cesiumViewer {
    width: 100%;
    height: 100%;
}

.attitude-container {
    grid-column: 2/3;
    grid-row: 4/6;
    border: 3px solid white;
}

.telemetry-tile {
    position: relative;
    float: left;
    border-radius: 25px;
    border: 2px solid #73AD21;
    padding: 20px;
    text-align: center;
    height: 140px;
    width: 100px;
}

.telemetry-container {
    grid-column: 1/3;
    grid-row: 5/6;
    border: 3px solid white;
}


a {
    text-decoration: none;
}



.cesium-widget-credits {
  /* hides credits */
  visibility: hidden;
}

.cesium-viewer-toolbar {
  /* hides search bar panel */
  visibility:hidden;
}

